# test1

./: AbSetDialog.h  AbWidg.cpp  AbWidg.h  Action_CD.cpp  Action_CD.h  BV.cpp  BV.h  BV_ot_do_class.cpp  BV_ot_do_class.h  CMakeLists.txt  Contr.cpp  Contr.h  Dialog_val.cpp  Dialog_val.h  ExSetDialog.cpp  ExSetDialog.h  Imit_ab.cpp  Imit_ab.h  Imitation_List.cpp  Imitation_List.h  Save_Class.cpp  Save_Class.h  State.h  gui.cpp  gui.h  imit_inf.qrc  main.cpp  message.h  rui.cpp  test_xml.xml  Справочные материалы.txt
